# rattle-blank-lines

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
fixit_blank_lines/: __init__.py  utils.py
fixit_blank_lines/rules/: __init__.py  base.py  blank_line_after_control_block.py  blank_line_before_assignment.py  blank_line_before_branch_in_large_suite.py  block_header_cuddle_relaxed.py  block_header_cuddle_strict.py  match_case_separation.py  no_suite_leading_trailing_blank_lines.py
rattle_blank_lines/: utils.py
rattle_blank_lines/rules/: base.py  blank_line_after_control_block.py  blank_line_before_assignment.py  block_header_cuddle_relaxed.py  no_suite_leading_trailing_blank_lines.py
tests/: test_fixit_blank_lines.py  test_rule_behavior.py
